# TinyORM-HelloWorld

./: .clang-tidy  .env.example  .env.mingw.example  .env.unix.example  .env.win32.example  .gitignore  .qmake.conf.example  CMakeLists.txt  HelloWorld.pro  HelloWorld.sqlite3  README.md  main.cpp  vcpkg.json.Manual.example  vcpkg.json.VcpkgManifest.Qt5.example  vcpkg.json.VcpkgManifest.Qt6.example
